# ChangeLog for dev-perl/Text-Aspell
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Aspell/ChangeLog,v 1.29 2007/03/05 12:32:43 ticho Exp $

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Text-Aspell-0.06.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Text-Aspell-0.06.ebuild:
  Stable on Alpha + IA64.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Text-Aspell-0.04.ebuild, Text-Aspell-0.05.ebuild, Text-Aspell-0.06.ebuild:
  Ebuild maintenance

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Text-Aspell-0.06.ebuild:
  Stable on ppc.

  25 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Aspell-0.06.ebuild:
  sparc stable

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Aspell-0.06.ebuild:
  amd64 stable

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Text-Aspell-0.05.ebuild:
  ppc stable

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  Text-Aspell-0.05.ebuild:
  Stable on ia64.

  20 Sep 2006; Christian Hartmann <ian@gentoo.org> Text-Aspell-0.04.ebuild,
  Text-Aspell-0.05.ebuild, Text-Aspell-0.06.ebuild:
  Disabled tests wrt bug #147897

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Aspell-0.03.ebuild, Text-Aspell-0.04.ebuild, Text-Aspell-0.05.ebuild,
  Text-Aspell-0.06.ebuild:
  Adding perl dep; fixed DEPEND

*Text-Aspell-0.06 (30 Jul 2006)

  30 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  +Text-Aspell-0.06.ebuild:
  Version bump

  05 Jul 2006; Christian Hartmann <ian@gentoo.org> Text-Aspell-0.03.ebuild,
  Text-Aspell-0.04.ebuild, Text-Aspell-0.05.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header

  02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Aspell-0.05.ebuild:
  Marking stable amd64 and sparc

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> Text-Aspell-0.04.ebuild:
  Mark 0.04 stable on ia64
